UseCaseManagement/force-app/main/default/objects/Account/fields/Clients_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Clients_Revenue__c</fullName>
    <formula>Current_Revenue__c *0.9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clients Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>