UseCaseManagement/force-app/main/default/objects/Account/fields/Current_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Revenue__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Current Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>