UseCaseManagement/force-app/main/default/objects/Account/fields/MX_Relations_Client_Commission__c.field-meta.xml
<CustomField>
    <fullName>MX_Relations_Client_Commission__c</fullName>
    <formula>Current_Revenue__c *0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MX  Relations Client Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>